@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2013-07-02 Matt
+	* Adding sumet to all met terms except refCell and softJet since these are no longer used.
+	* Fixed missing copy constructor for softTerm in SusyNt.cxx
+	
 2013-06-26 Steve
 	* Addd isSemiSignalElectron and isSemiSignalMuon from Tina
 	* Updated 3L isolation corrections to only subtract semi-signal leptons
